--- a/src/js/common/components/Header/CSS/Header.css
+++ b/src/js/common/components/Header/CSS/Header.css
@@ -52,3 +52,12 @@ img {
   max-width: 100%;
   height: auto;
 }
+.bannerForm {
+  > div {
+    > div {
+      &::before, &::after {
+        display: none;
+      }
+    }
+  }
+}
