--- a/src/js/common/components/Pages/HomeCSS/Home.css
+++ b/src/js/common/components/Pages/HomeCSS/Home.css
@@ -7,3 +7,27 @@ ul {
     display: inline-block;
   }
 }
+.journey {
+  .container {
+    label {
+      + div {
+        &::before {
+          border-bottom: 2px solid #e5e5e5!important;
+        }
+        &::after {
+          border-bottom: 2px solid $brand-color;
+        }
+      }
+    }
+    > div {
+      > div {
+        > div {
+          label.Mui-focused {
+            color: $brand-color;
+
+          }
+        }
+      }
+    }
+  }
+}
