--- a/src/assets/template/_default.html
+++ b/src/assets/template/_default.html
@@ -9,8 +9,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="shortcut icon" type="image/png" href="../images/favicon.png"/>
-    <!-- <link type="image/x-icon" rel="icon" href="../images/favicon.png"> -->
+    <!-- <link rel="shortcut icon" type="image/png" href="../images/favicon.png"/> -->
+    <link type="image/x-icon" rel="icon" href="../images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
