--- a/src/js/common/components/Header/CSS/Desktop.css
+++ b/src/js/common/components/Header/CSS/Desktop.css
@@ -2,11 +2,12 @@
   .globalHeader {
     ul {
       list-style: none;
-      text-align: center;
+      /*text-align: center;*/
       li {
+        color: #a24a87;
         display: inline-block;
         padding-right: 74px;
-        font-size: 18px;
+        font-size: 22px;
         &:last-child {
           padding-right: 0; 
         }
@@ -76,7 +77,7 @@
     }
     button {
       position: absolute;
-      right: 6px;
+      /*right: 6px;*/
       top: 20px;
       height: 70px;
       border-radius: 35px;
