--- a/src/js/common/components/Header/CSS/Mobile.css
+++ b/src/js/common/components/Header/CSS/Mobile.css
@@ -10,6 +10,7 @@
       list-style: none;
       text-align: left;
       li {
+        color: #a24a87;
         display: block!important;
         font-size: 18px;
         margin-bottom: 15px;
@@ -77,7 +78,7 @@
     }
     button {
       position: absolute;
-      right: 6px;
+      /*right: 6px;*/
       top: 18px;
       height: 55px;
       border-radius: 35px;
@@ -93,6 +94,6 @@
     }
   }
   .list {
-    width: 80%;
+    /*width: 80%;*/
   }
   }
