--- a/src/js/common/components/Header/CSS/Header.css
+++ b/src/js/common/components/Header/CSS/Header.css
@@ -61,6 +61,21 @@ img {
     }
   }
 }
+.loanHeaderAccessButton {
+  button {
+        height: 70px;
+        border-radius: 35px;
+        padding: 0 24px;
+        font-size: 20px;
+        background-color: #a24a87;
+        &:hover {
+          background-color: #b24a87;
+        }
+      span {
+        text-transform: none;
+        }
+      }
+}
 header {
   box-shadow: 0 5px 14px rgba(0, 0, 0, 0.3);
   padding-bottom: 20px;
