Added google tag manager

--- a/src/assets/template/_default.html
+++ b/src/assets/template/_default.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-765926553"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -29,6 +30,14 @@
      <script type="text/javascript">
       (function(g,r,s,f){g.growsurf={};g.grsfSettings={campaignId:"h8w92m",version:"2.0.0"};s=r.getElementsByTagName("head")[0];f=r.createElement("script");f.async=1;f.src="https://growsurf.com/growsurf.js"+"?v="+g.grsfSettings.version;f.setAttribute("grsf-campaign", g.grsfSettings.campaignId);!g.grsfInit?s.appendChild(f):"";}
         )(window,document);
+    </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 765926553 -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-765926553');
     </script>
     
 </head>
