--- a/src/js/common/components/Header/CSS/Desktop.css
+++ b/src/js/common/components/Header/CSS/Desktop.css
@@ -4,7 +4,7 @@
       list-style: none;
       /*text-align: center;*/
       li {
-        color: #a24a87;
+        color: #4A494B;
         display: inline-block;
         padding-right: 74px;
         font-size: 22px;
