--- a/src/js/common/components/Header/CSS/Mobile.css
+++ b/src/js/common/components/Header/CSS/Mobile.css
@@ -10,7 +10,7 @@
       list-style: none;
       text-align: left;
       li {
-        color: #a24a87;
+        color: #4A494B;
         display: block!important;
         font-size: 18px;
         margin-bottom: 15px;
