--- a/src/style/configs/color.css
+++ b/src/style/configs/color.css
@@ -1,6 +1,6 @@
 $color-title: #a24a87;
 $brand-color: #a24a87;
 $body-color: #6c6c6c;
-$bg-color: #fff6fc;
+$bg-color: #fff;
 $btn-bg-color: #a24a87;
 $btn--hover-bg-color: #b24a87;
