--- a/src/js/common/components/Header/CSS/Header.css
+++ b/src/js/common/components/Header/CSS/Header.css
@@ -2,11 +2,11 @@
 @import "../CSS/Desktop.css";
 @import "../CSS/Mobile.css";
 .globalHeader {
-  background-image:url('../../../../../assets/images/bgTexture.png');
+  /*background-image:url('../../../../../assets/images/bgTexture.png');*/
     background-attachment:fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #fff2fb;
+    /*background-color: #fff2fb;*/
   nav {
     display: inline-block;
     float: right;
