--- a/src/js/common/components/Header/CSS/Header.css
+++ b/src/js/common/components/Header/CSS/Header.css
@@ -77,7 +77,7 @@ img {
       }
 }
 header {
-  box-shadow: 0 5px 14px rgba(0, 0, 0, 0.3);
+  /*box-shadow: 0 5px 14px rgba(0, 0, 0, 0.3);*/
   padding-bottom: 20px;
 }
 .newappBar {
