removed hash from url, fixed css bugs

--- a/src/js/common/components/DownloadAppComponent/DownloadApp.css
+++ b/src/js/common/components/DownloadAppComponent/DownloadApp.css
@@ -28,7 +28,8 @@
   align-items: center;
 }
 .footerSection {
-  padding-top: 18px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 .message{
   padding: 0 40px;
