--- a/src/js/common/components/Pages/Home/LeadingSecurityComponent/LeadingSecurity.css
+++ b/src/js/common/components/Pages/Home/LeadingSecurityComponent/LeadingSecurity.css
@@ -18,6 +18,9 @@
   margin-bottom:22px;
 }
 @media screen and (max-width: 768px) {
+  .rowSpacing{
+    margin-bottom: 0;
+  }
   .imagePaddingLeft{
     padding-left:0;
     padding-top: 5px;
