--- a/src/style/configs/color.css
+++ b/src/style/configs/color.css
@@ -2,5 +2,5 @@ $color-title: #a24a87;
 $brand-color: #a24a87;
 $body-color: #6c6c6c;
 $bg-color: #fff6fc;
-$btn-bg-color: #a24a87;
-$btn--hover-bg-color: #b24a87;
+$btn-bg-color: #B04995;
+$btn--hover-bg-color: #a24a87;
