--- a/src/js/common/components/Footer/Footer.css
+++ b/src/js/common/components/Footer/Footer.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   box-shadow: rgba(172, 185, 196, 0.28) 0px 10px 25px 0px;
   margin: 4.7vw auto 0;
-  width: 95%;
+  padding: 0 20px;
 }
 .contactBlock{
   display: flex;
@@ -60,6 +60,9 @@
   margin-top: 10vw;
 }
 @media screen and (max-width: 1000px) {
+  .contactSection{
+    padding: 20px 20px 0 20px;
+  }
   .socialWrapper{
     margin:0 auto;
   }
