--- a/src/js/common/components/Pages/Home/StartBankingComponent/StartBanking.css
+++ b/src/js/common/components/Pages/Home/StartBankingComponent/StartBanking.css
@@ -2,9 +2,14 @@
   margin-top: 5vw;
   padding-right: 7vw;
 }
+.shadow{
+  box-shadow: 0 10px 25px 0 rgba(172,185,196,0.28);
+  padding:50px 26px 22px 12px;
+}
 .success{
   margin-left:auto;
   display:block;
+  transform: translate(-23px,53px);
 }
 .successBlock{
   display:flex;
@@ -17,30 +22,35 @@
     background-color: #B04995;
     padding: 8px 6px;
     border-radius: 50%;
-    margin-right: 8px;
+    max-width: initial;
+    box-shadow: 0 0 0 10px #F5F5F6;
 }
 .successIcon2{
     background-color: #D86293;
     padding: 8px 6px;
     border-radius: 50%;
-    margin: 0 8px;
+    max-width: initial;
+    box-shadow: 0 0 0 10px #F5F5F6;
 }
 .successIcon3{
     background-color: #EB606F;
     padding: 8px 6px;
+    max-width: initial;
+    box-shadow: 0 0 0 10px #F5F5F6;
     border-radius: 50%;
-    margin-left: 8px;
 }
 .gradient1{
   width:100%;
   max-width:100%;
-  height:5px;
+  height: 15px;
+  border: 5px solid #F5F5F6;
   background:linear-gradient(left, #B04995,  #D86293);
 }
 .gradient2{
   width:100%;
-  height:5px;
+  height: 15px;
   max-width:100%;
+  border: 5px solid #F5F5F6;
   background:linear-gradient(left, #D86293,  #EB606F);
 }
 .stepBlock{
@@ -66,10 +76,6 @@
   .gradient2,.gradient1{
     width:5px;
     height:90px;
-    margin: 5px 0 5px;
-  }
-  .successIcon1, .successIcon2,.successIcon3{
-    margin:0;
   }
   .stepBlock{
     flex-direction: column;
@@ -86,6 +92,8 @@
   }
   .wrapper{
     padding-right: 0;
+  }
+  .shadow{
     display:flex;
   }
 }
