--- a/src/js/common/components/Pages/Home/StudentAccountComponent/StudentAccount.css
+++ b/src/js/common/components/Pages/Home/StudentAccountComponent/StudentAccount.css
@@ -16,17 +16,18 @@
   padding: 10px 10px 10px 48px;
   border-radius: 42.5px;
   box-shadow: 0 10px 25px 0 rgba(172,185,196,0.28);
-  display: flex;
-  align-items: center;
+  display: inline-block;
 }
 .formInput{
+  transform: translateY(5px);
   border:none;
   font-size: 20px;
   font-weight: 300;
   line-height: 30px;
   height: 30px;
   &::placeholder{
-    color: #252827;
+    font-weight: 300;
+    color: #302e2e;
   }
 }
 .topPadding{
@@ -54,6 +55,9 @@
   }
   .form{
     flex-direction: column;
+    display: flex;
+    align-items: center;
+    box-shadow:none;
   }
   .formInput{
     font-size: calc(13px + 1vw);
