--- a/src/js/common/components/TestimonialComponent/Testimonial.css
+++ b/src/js/common/components/TestimonialComponent/Testimonial.css
@@ -1,7 +1,7 @@
 .tabRow{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 4.8vw;
+  margin-bottom: 2vw;
 }
 .tab{
     display: flex;
@@ -22,7 +22,7 @@
     width:100%;
     border-radius: 10px;
     background: linear-gradient(315.52deg, rgb(200, 97, 173) 0%, rgb(255, 121, 135) 100%);
-    box-shadow: rgba(176, 73, 149, 0.32)
+    box-shadow: 0 10px 25px 0 rgba(176,73,149,0.32);
 }
 .tabAvatar{
     max-height: 89px;
