--- a/src/js/common/components/DownloadAppComponent/DownloadApp.css
+++ b/src/js/common/components/DownloadAppComponent/DownloadApp.css
@@ -57,6 +57,7 @@
     flex-basis: 100%;
     font-size: calc(13px + 1vw);
     text-align: center;
+    margin-bottom: 15px;
   }
 }
 @media screen and (max-width: 800px) {
