--- a/src/js/common/components/Footer/Footer.css
+++ b/src/js/common/components/Footer/Footer.css
@@ -76,9 +76,10 @@
 }
 @media screen and (max-width: 768px) {
   .contactBlock{
-    justify-content: center;
+    justify-content: flex-start;
     flex-basis: 50% !important;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-left: 37px;
   }
 }
 @media screen and (max-width: 768px) {
