--- a/src/js/common/components/Pages/Home/GlobalAccountComponent/GlobalAccount.css
+++ b/src/js/common/components/Pages/Home/GlobalAccountComponent/GlobalAccount.css
@@ -46,7 +46,9 @@
   }
   .row{
     width: 90%;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 25px;
+    padding-bottom: 20px;
   }
 }
