--- a/src/js/common/components/Pages/Home/StudentAccountComponent/StudentAccount.css
+++ b/src/js/common/components/Pages/Home/StudentAccountComponent/StudentAccount.css
@@ -63,5 +63,9 @@
     font-size: calc(13px + 1vw);
     line-height: normal;
     margin-bottom:10px;
+    border-radius: 25px;
+    height: 45px;
+    padding: 15px;
+    border: 1px solid #c6c4c4;
   }
 }
