--- a/src/js/common/components/Pages/Loan/LoanCSS/Mobile.css
+++ b/src/js/common/components/Pages/Loan/LoanCSS/Mobile.css
@@ -155,12 +155,12 @@
     }
   }
   .container {
-    margin-top: 30px;
+    /*margin-top: 30px;*/
     >div {
       >div {
         &:nth-child(even) {
           >div {
-            padding-right: 0;
+            /*padding-right: 0;*/
           }
         }
         >div {
