--- a/src/js/common/components/Footer/Footer.css
+++ b/src/js/common/components/Footer/Footer.css
@@ -42,6 +42,7 @@
   list-style-type: none;
   padding-left: 0;
   li{
+    display: block;
     cursor: pointer;
     transition: $transition;
     &:hover{
