--- a/src/js/common/components/Header/CSS/Mobile.css
+++ b/src/js/common/components/Header/CSS/Mobile.css
@@ -1,4 +1,4 @@
-@import "../../../../../style/configs/color";
+@import "../../../../../style/configs/color.css";
 @media only screen and (max-width: 768px)  {
   .globalHeader {
     nav {
@@ -88,9 +88,9 @@
       &:hover {
         background-color: #b24a87;
       }
-    span {
-      text-transform: none;
-    }
+      span {
+        text-transform: none;
+      }
     }
   }
   .list {
@@ -98,6 +98,25 @@
   
     a {
       text-decoration: none;
+      color: #4A494B;
+      
+      &.active {
+        color: #B04995;
+
+        &::after {
+          position: relative;
+          display: block;
+          content: ' ';
+          width: 100%;
+          height: 4px;
+          border-radius: 2px;
+          background-color: #B04995;
+        }
+      }
+
+      button {
+        border-radius: 18px;
+      }
     }
   }
 }
