--- a/src/assets/template/_default.html
+++ b/src/assets/template/_default.html
@@ -13,7 +13,8 @@
     <link type="image/x-icon" rel="icon" href="nolo-favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+    <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-765926553"></script>
