--- a/src/js/common/components/Pages/Blog/BlogCSS/Blog.css
+++ b/src/js/common/components/Pages/Blog/BlogCSS/Blog.css
@@ -7,17 +7,37 @@ $xl: '1920px';
 .blog-container {
   padding-top: 48px;
   color: #4A494B;
+  font-size: 15px;
 
   .blog-item-latest {
     img {
       width: 100%;
       height: auto;
     }
-    .title {
-      font-size: 32px;
-      font-weight: 600;
-      margin-top: 10px;
-      line-height: 40px;
+
+    .grid-content {
+      padding-top: 60px;
+      padding-bottom: 60px;
+
+      .title {
+        font-size: 32px;
+        font-weight: 600;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        line-height: 40px;
+      }
+    }
+
+    .grid-image {
+      padding-top: 0;
+      padding-bottom: 0;
+      
+      .thumbnail {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: 50%;
+      }
     }
   }
 
@@ -35,7 +55,6 @@ $xl: '1920px';
     span {
       margin-left: 10px;
       margin-right: 10px;
-      font-size: 15px;
     }
   }
 
@@ -43,5 +62,22 @@ $xl: '1920px';
     color: #A4A2A7;
     font-size: 13px;
     font-weight: 700;
+  }
+
+  .about {
+    margin-bottom: 30px;
+  }
+
+  .button-link {
+    text-decoration: none;
+    
+    button {
+      font-family: 'Muli';
+      font-weight: 800;
+      background-color: #B04995;
+      padding: 9px 27px;
+      border-radius: 22px;
+      font-size: 15px;
+    }
   }
 }
