--- a/src/js/common/components/Pages/Blog/BlogCSS/Blog.css
+++ b/src/js/common/components/Pages/Blog/BlogCSS/Blog.css
@@ -5,41 +5,10 @@ $lg: '1280px';
 $xl: '1920px';
 
 .blog-container {
-  padding-top: 48px;
+  clear: both;
+  margin-top: 78px;
   color: #4A494B;
   font-size: 15px;
-
-  .blog-item-latest {
-    img {
-      width: 100%;
-      height: auto;
-    }
-
-    .grid-content {
-      padding-top: 60px;
-      padding-bottom: 60px;
-
-      .title {
-        font-size: 32px;
-        font-weight: 600;
-        margin-top: 10px;
-        margin-bottom: 20px;
-        line-height: 40px;
-      }
-    }
-
-    .grid-image {
-      padding-top: 0;
-      padding-bottom: 0;
-      
-      .thumbnail {
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: 50%;
-      }
-    }
-  }
 
   .author {
     display: flex;
@@ -54,7 +23,6 @@ $xl: '1920px';
 
     span {
       margin-left: 10px;
-      margin-right: 10px;
     }
   }
 
@@ -78,6 +46,92 @@ $xl: '1920px';
       padding: 9px 27px;
       border-radius: 22px;
       font-size: 15px;
+    }
+  }
+
+  .blog-item-latest {
+    margin-bottom: 100px;
+
+    .grid-content {
+      padding-top: 60px;
+      padding-bottom: 60px;
+
+      .title {
+        font-size: 32px;
+        font-weight: 600;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        line-height: 40px;
+      }
+    }
+
+    .grid-image {
+      padding-top: 0;
+      padding-bottom: 0;
+      min-height: 350px;
+      
+      .thumbnail {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: 50%;
+      }
+    }
+  }
+
+  .input-container {
+    .paper {
+      padding: 10px 10px 10px 30px;
+      border-radius: 32px;
+      display: flex;
+      align-items: center;
+      width: 50%;
+      min-width: 400px;
+      margin: 0 auto;
+      box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.1), 0px 6px 10px 0px rgba(0,0,0,0.07), 0px 1px 18px 0px rgba(0,0,0,0.06);
+    }
+
+    .input {
+      margin-left: 8px;
+      flex: 1;
+    }
+    
+    .button {
+      padding: 10px;
+    }
+  }
+
+  .blogs {
+    margin-top: 70px;
+
+    .blog-item {
+      margin-bottom: 50px;
+
+      .grid-content {
+        padding-top: 12px;
+        padding-bottom: 12px;
+
+        .title {
+          font-size: 32px;
+          font-weight: 600;
+          margin-top: 10px;
+          margin-bottom: 20px;
+          line-height: 40px;
+        }
+      }
+
+      .grid-image {
+        padding-top: 0;
+        padding-bottom: 0;
+        min-height: 250px;
+        
+        .thumbnail {
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-position: 50%;
+        }
+      }
     }
   }
 }
