--- a/src/js/common/components/Pages/Blog/BlogCSS/Blog.css
+++ b/src/js/common/components/Pages/Blog/BlogCSS/Blog.css
@@ -5,8 +5,7 @@ $lg: '1280px';
 $xl: '1920px';
 
 .blog-container {
-  clear: both;
-  margin-top: 78px;
+  margin-top: 48px;
   color: #4A494B;
   font-size: 15px;
 
@@ -46,15 +45,21 @@ $xl: '1920px';
       padding: 9px 27px;
       border-radius: 22px;
       font-size: 15px;
+      text-transform: none;
     }
   }
 
   .blog-item-latest {
-    margin-bottom: 100px;
+    margin-bottom: 70px;
 
-    .grid-content {
+    .blog-content {
       padding-top: 60px;
       padding-bottom: 60px;
+
+      @media (max-width: 600px) {
+        padding-top: 12px;
+        padding-bottom: 0;
+      }
 
       .title {
         font-size: 32px;
@@ -64,18 +69,13 @@ $xl: '1920px';
         line-height: 40px;
       }
     }
-
-    .grid-image {
-      padding-top: 0;
-      padding-bottom: 0;
+     
+    .thumbnail {
       min-height: 350px;
-      
-      .thumbnail {
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: 50%;
-      }
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: 50%;
     }
   }
 
@@ -103,35 +103,49 @@ $xl: '1920px';
 
   .blogs {
     margin-top: 70px;
+    margin-bottom: 100px;
 
     .blog-item {
       margin-bottom: 50px;
 
-      .grid-content {
+      .blog-content {
         padding-top: 12px;
         padding-bottom: 12px;
 
         .title {
-          font-size: 32px;
+          font-size: 24px;
           font-weight: 600;
           margin-top: 10px;
           margin-bottom: 20px;
           line-height: 40px;
         }
       }
-
-      .grid-image {
-        padding-top: 0;
-        padding-bottom: 0;
-        min-height: 250px;
         
-        .thumbnail {
-          width: 100%;
-          height: 100%;
-          background-size: cover;
-          background-position: 50%;
-        }
+      .thumbnail {
+        min-height: 250px;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: 50%;
       }
+    }
+  }
+
+  .button-older {
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+
+    .button {
+      font-family: 'Muli';
+      color: #4A494B;
+      font-weight: 800;
+      background-color: #EDECED;
+      padding: 9px 27px;
+      border-radius: 22px;
+      font-size: 15px;
+      margin: 0 auto;
+      text-transform: none;
     }
   }
 }
