--- a/src/js/common/components/Pages/BlogDetail/BlogDetailCSS/BlogDetail.css
+++ b/src/js/common/components/Pages/BlogDetail/BlogDetailCSS/BlogDetail.css
@@ -87,6 +87,10 @@ $xl: '1920px';
     line-height: 40px;
   }
 
+  .image2 {
+    margin-bottom: 50px;
+  }
+
   .img-grid {
     .thumbnail {
       margin-bottom: 0;
@@ -113,5 +117,9 @@ $xl: '1920px';
         line-height: 30px;
       }
     }
+  }
+
+  .places {
+    margin-bottom: 160px;
   }
 }
